--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                 <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
 
                 <div class="portfolio_">
-                    <h3 class="portfolio__title">Shoable</h3>
+                    <h3 class="portfolio__title">CodeCommerce</h3>
                     <p class="portfolio__description"> A dynamic and online shopping platform offering a
                         diverse range of top-quality products.</p>
                     <a href="#" class="button button--flex button--small portfolio__button">
@@ -649,8 +649,8 @@
                 <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
 
                 <div class="portfolio_">
-                    <h3 class="portfolio__title">Chipmunk</h3>
-                    <p class="portfolio__description">A game developed using html, css and js.</p>
+                    <h3 class="portfolio__title">Whisker Chase</h3>
+                    <p class="portfolio__description">A game developed using HTML, CSS and JS</p>
                     <a href="https://github.com/Charishma-K/JS-Game.git" class="button button--flex button--small portfolio__button">
                         Demo
                         <i class="uil uil-arrow-right button__icon"></i>
@@ -664,7 +664,7 @@
                 <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
 
                 <div class="portfolio_">
-                    <h3 class="portfolio__title">Portofolio</h3>
+                    <h3 class="portfolio__title">Work Portfolio</h3>
                     <p class="portfolio__description">Through this portfolio, I aim to showcase my skills, accomplishments, and journey </p>
                     <a href="#" class="button button--flex button--small portfolio__button">
                         Demo
